--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
 
-    <title>Amazon Clone</title>
+    <title>Amazon Clone by A.Magdy</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
